@@ -11,7 +11,8 @@ HalfLife: half-life maps saved in q1 map format are not supported - currently ha
 Entity: creating a new entity with all the brushes of another entity selected results in the latter entity having no brushes.
 SConscript: build fails if SETUP=1
 Brush: non-BP auto-texture-fit fails when rotation is 90
-GUII: can't use arrow keys to navigate in camera view when capslock is enabled
+GUI: can't use arrow keys to navigate in camera view when capslock is enabled
+GUI: screensaver causes: gdkgc-win32.c: line 905 (gdk_win32_hdc_get): assertion failed: (win32_gc->hdc == NULL)
 
 
 FEATURES
